--- a/flowchart.html
+++ b/flowchart.html
@@ -1,23 +1,18 @@
-### ONT Reference Mapping deployment
-
-Map multiple ONT reads to multiple reference genomes using minimap2 and extract mapping statistics.
-
-Currently, the nextflow script needs to be edited to specify the input and output directories, and change the `params` section to specify the parameters for minimap2 and prinseq++ (optional).
-
-#### Pipeline Dependencies
-
-The pipeline requires the following software:
-
-- minimap2
-- prinseq++
-- samtools
-
-and the pandas python package.
-
-These are included in the conda environment defined in the `environment.yml` file.
-
-#### Pipeline Overview
-
+<!--
+  ~ Copyright 2013-2024, Seqera Labs
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <html>
 <head>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
